styles/style.css
* { /* resets everything */
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* body styling */
body { 
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    line-height: 1.5;
    background: #660014;
    color: white;
}

/*header styling*/
.header {
    background-color:#3e000c;
    color: white;
    min-height:100px;
    margin: 0;
    padding: 15px;
    width: 100%;
}

.header h1 {
    font-size: 2.5rem;
    font-weight: bold;
    line-height: 1.2;
    margin-right: 15px;
}

.header .img {
    max-width: 400px;
}

.header .fbc {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.header p {
    margin-right: 15px;
}

.header p a {
color: white;
}

img { /*global image styling*/
    max-width:50%;
    object-fit:contain;
}
    
h1, h2 { /*global h1 and h2 styling*/
        margin-bottom: 16px ;
}

iframe {
    border: none;
}

#JotFormIFrame-230031357831851 { /*removed styling from iframe embed code provided by jotform*/
    min-width: 100%;
    height:600px;
    border:none;

}

#resform h2 {
    display: none;
}

/*table styling*/
table {
    width: 100%;
    margin-left: 15px;
}

td {
    padding-bottom: 20px;
}

/*navbar styling*/
.navigation { /*global navigation styling*/
    list-style-type: none;
}

.navbar { /*styles the navbar*/
    background: #520010;
    color: white;
    height: 80px;
    position: sticky;
    /*position: -webkit-sticky;*/
    top: 0;
    
}

.navbar .logo { /*styles the logo within the navbar*/
    font-weight: bold;
    font-size: xx-large;
    font-family: 'Fira Sans', sans-serif;
    user-select: none;
}

.navbar .fbc { /*styles the flex box container within the nav bar*/
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
    width: 100%;
}

.navbar a { /*styles the links within the navbar*/
    /*text-decoration: none;*/ /*removed to fix level A accessibility issue */
    list-style: none;
    font-size: 16px;
    font-weight: bold;
    color: white;
}

.navbar a:hover {
    text-decoration: none;
}

.navbar .navigation { /*styles the nav list*/
    display: flex;
}

.navbar .navigation li { /*styles the list items within the nav list*/
    margin-left: 25px;
}

/*sectionpart (flexboxContainerType1) styling*/
.fbc { 
    max-width: 1100px;
    padding: 0 35px;
    margin-left: auto;
    margin-right: auto;
}

.flex-section { /* styles the flex box containers */
    max-width: 1100px;
    margin: 0 auto;
}

/*sectionpart (flexboxContainerType2) styling*/
.sectionpart {
    display: flex;
    justify-content: space-between;
    background: #3e000c;
    color: white;
    border-radius: 10px;
    margin: 20px 10px;
    box-shadow: 3px 3px 5px rgba(0,0,0,70%); /*x-shadow, y-shadow, blur-radius, colour with opacity% */
    padding: 15px 25px;
}

.sectionpart p {
    padding: 20px
}

.sectionpart a {
    
    font-size: 16px;
    color: white;
}

.sectionpart:nth-of-type(odd) { /*thanks frogs. This alternates the image placement through each sectionpart*/
    flex-direction: row-reverse;
}

.sectionpart:nth-of-type(odd) h2 { /*thanks frogs. This alternates the h2 placement through each sectionpart*/
    padding-left: 30px;
}
.sectionpart:nth-of-type(even) h2 { /*thanks frogs. This alternates the h2 placement through each sectionpart*/
    padding-right: 30px;
}

.column p {
    text-align: center;
}

/*footer styling*/
footer {
    background-color:#3e000c;
    color: white;
    height: 40px;
}

footer .fbc{
    display: flex;
    align-items: center;
    justify-content: space-between; /*with two itens*/
    height: 100%;
    
}

/*media queries*/
/*<768px styling*/
@media (max-width: 768px) {
    .header .fbc {
        flex-direction: column;
    }

    .section .sectionpart {
        flex-direction: column;
        text-align: center;

    }

    li {
        padding-bottom: 5px;
        text-align: right;
    }

    .navbar {
        height: 10em;
    }

    footer {
        height: 4em;
    }

    .navbar .navigation {
        flex-direction: column;
        }



    img {
        align-self: center;
        
    }

    td {
        display: flex;
        padding-bottom: 10px;
        justify-content: center;
        
        
    }

    table {
        margin-left: 0px;
    }

    .sectionpart h1 {
        display: flex;
        margin: 0px;
        justify-content: center;
    }

    .sectionpart h2 {
        display: flex;
        padding-left: 0px;
        justify-content: center;
    }
    
    .sectionpart img {
        display: flex;
        justify-content: center;
    }

    .sectionpart iframe {
        display:block;
        width: 100%;
    }

    .fbc p,h1 {
        padding: 0px;
        margin: 0px;
        justify-content: center;
        
    }
    
    .header .fbc h1,p {
        margin: 0px;
        text-align: center;
    }

    .sectionpart:nth-of-type(odd) h2 {
        padding: 0px;
    }

    .sectionpart:nth-of-type(even) h2 {
        padding: 0px;
    }


/*<480px styling*/
@media (max-width: 480px) { /*designed down to 320px, then recommend not using a potato to access website*/
    .navbar .logo {
        font-size: x-large;
        align-self: center;
    }

    .sectionpart img { /*res too small for images to be useful*/
        display: none;
    }

    img { /*res too small for images to be useful*/
        display: none;
    }
    
    .sectionpart iframe {
        display: none;
    }

    
}

}

